# archaic-deliberation

./: .gitignore  LICENSE  README.md
castigate/: Cargo.toml  README.md
castigate/src/: lib.rs
castigate/src/helper/: connector.rs  mod.rs
regime/: .gitignore  README.md  build.sbt
regime/src/main/resources/: .gitignore  conn.template.conf
regime/src/main/resources/sql/portfolio/: RPortfolioNetValueChange.sql  calculate_history_product_value_chg.sql  calculate_net_value_chg_d.sql  calculate_net_value_chg_m.sql  calculate_net_value_chg_q.sql  calculate_net_value_chg_y.sql  product_time_range.sql  retrieve_activate_products.sql  retrieve_calendar.sql  retrieve_product_valuation.sql
regime/src/main/resources/sql/product/: IProductBalance.sql  IProductInformation.sql  IProductPosition.sql  IProductValuation.sql
regime/src/main/scala/regime/: Main.scala  Regime.scala  TaskCategory.scala
regime/src/main/scala/regime/helper/: RegimeCalcHelper.scala  RegimeCommand.scala  RegimeDFHelper.scala  RegimeFn.scala  RegimeJdbcHelper.scala  RegimeSpark.scala  RegimeSparkSync.scala  RegimeSqlHelper.scala  RegimeSyncHelper.scala  RegimeTimeHelper.scala
regime/src/main/scala/regime/market/: Command.scala  Common.scala  RegimeTask.scala  TaskCategory.scala  TaskMarket.scala
regime/src/main/scala/regime/portfolio/: Common.scala  RPortfolioIndicator.scala  RPortfolioIndicators.scala  RPortfolioNetValueChange.scala  RProductValueChange.scala  (+1 more)
regime/src/test/scala/regime/: TestBatchOption.scala  TestDateConversion.scala  TestRegimeConn.scala  TestTaskCategory.scala
(+97 files in other folders)
