[package]
name = "castigate"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
futures = "0.3.24"
sqlx = { version = "0", features = ["runtime-tokio-rustls", "postgres", "mysql", "mssql", "chrono"] }
tokio = { version = "1", features = ["full"] }
